# nanoeigenpy

./: .gersemirc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  pixi.toml
include/nanoeigenpy/: eigen-base.hpp  fwd.hpp  id.hpp
include/nanoeigenpy/decompositions/: bdcsvd.hpp  col-piv-householder-qr.hpp  complete-orthogonal-decomposition.hpp  complex-eigen-solver.hpp  complex-schur.hpp  eigen-solver.hpp  full-piv-householder-qr.hpp  full-piv-lu.hpp  generalized-eigen-solver.hpp  generalized-self-adjoint-eigen-solver.hpp  hessenberg-decomposition.hpp  householder-qr.hpp  jacobi-svd.hpp  ldlt.hpp  llt.hpp  partial-piv-lu.hpp  permutation-matrix.hpp  real-qz.hpp  real-schur.hpp  self-adjoint-eigen-solver.hpp  svd-base.hpp  tridiagonalization.hpp
include/nanoeigenpy/decompositions/sparse/: simplicial-cholesky.hpp  simplicial-ldlt.hpp  simplicial-llt.hpp  sparse-lu.hpp  sparse-solver-base.hpp
include/nanoeigenpy/decompositions/sparse/cholmod/: cholmod-base.hpp  cholmod-decomposition.hpp  cholmod-simplicial-ldlt.hpp  cholmod-simplicial-llt.hpp  cholmod-supernodal-llt.hpp
include/nanoeigenpy/geometry/: angle-axis.hpp  hyperplane.hpp  parametrized-line.hpp  rotation-2d.hpp
src/: module.cpp
tests/: CMakeLists.txt  test_accelerate.py  test_cholmod_simplicial_ldlt.py  test_cholmod_simplicial_llt.py  test_cholmod_supernodal_llt.py  test_complex_eigen_solver.py  test_complex_schur.py  test_eigen_solver.py  test_full_piv_lu.py  test_generalized_eigen_solver.py  test_geometry.py  test_hessenberg_decomposition.py  test_import_extension.py  test_incomplete_cholesky.py  test_incomplete_lut.py  test_jacobi_svd.py  test_ldlt.py  test_llt.py  test_partial_piv_lu.py  test_permutation_matrix.py  test_qr.py  test_real_qz.py  test_real_schur.py  test_self_adjoint_eigen_solver.py  test_simplicial_llt.py  test_sparse_lu.py  test_sparse_qr.py  test_tridiagonalization.py
